unpackaged/main/default/objects/MonitoringDB__c/MonitoringDB__c.object-meta.xml
<CustomObject>
    <label>Historique D&amp;B</label>
    <nameField>
        <displayFormat>Modif N-{00000}</displayFormat>
        <label>Nom de Monitoring - D&amp;B</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitoring - D&amp;B</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>