unpackaged/main/default/objects/MonitoringDB__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Monitoring_D_B</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>