unpackaged/main/default/objects/MonitoringDB__c/fields/Champ_modifie__c.field-meta.xml
<CustomField>
    <fullName>Champ_modifie__c</fullName>
    <formula>CASE( FieldName__c , 
&#39;DB_Statut_Activite__c&#39;,  $Label.MonitoringDB_DB_Statut_Activite_c , 
&#39;DB_Code_Activite_SIC_Description__c&#39;,  $Label.MonitoringDB_DB_Code_Activite_SIC_Description_c , 
&#39;DB_Code_Activite_NACE__c&#39;,  $Label.MonitoringDB_DB_Code_Activite_NACE_c , 
&#39;DB_Raison_Sociale_DU__c&#39;,  $Label.MonitoringDB_DB_Raison_Sociale_DU_c , 
&#39;DB_Raison_Sociale_HQ__c&#39;,  $Label.MonitoringDB_DB_Raison_Sociale_HQ_c , 
&#39;DB_Email_Contact__c&#39;,  $Label.MonitoringDB_DB_Email_Contact_c, 
&#39;DB_Prenom_Dirigeant__c&#39;,  $Label.MonitoringDB_DB_Prenom_Dirigeant_c, 
&#39;DB_Nom_Dirigeant__c&#39;,  $Label.MonitoringDB_DB_Nom_Dirigeant_c, 
&#39;DB_Titre_Dirigeant__c&#39;,  $Label.MonitoringDB_DB_Titre_Dirigeant_c, 
&#39;DB_Rating__c&#39;,  $Label.MonitoringDB_DB_Rating_c, 
&#39;DB_Raison_Sociale__c&#39;,  $Label.MonitoringDB_DB_Raison_Sociale_c, 
&#39;DB_Adresse_Ligne1__c&#39;,  $Label.MonitoringDB_DB_Adresse_Ligne1_c, 
&#39;DB_Adresse_Ligne2__c&#39;,  $Label.MonitoringDB_DB_Adresse_Ligne2_c,
&#39;DB_Adresse_Code_Postal__c&#39;,  $Label.MonitoringDB_DB_Adresse_Code_Postal_c, 
&#39;DB_Adresse_Ville__c&#39;,  $Label.MonitoringDB_DB_Adresse_Ville_c, 
&#39;DB_Adresse_Pays__c&#39;,  $Label.MonitoringDB_DB_Adresse_Pays_c, 
&#39;DB_ID_Prefere__c&#39;,  $Label.MonitoringDB_DB_ID_Prefere_c, 
&#39;DB_Valeur_ID_Prefere__c&#39;,  $Label.MonitoringDB_DB_Valeur_ID_Prefere_c, 
&#39;DB_Valeur_Taxe__c&#39;,  $Label.MonitoringDB_DB_Valeur_Taxe_c, 
&#39;DB_Autre_Identifiant_National__c&#39;,  $Label.MonitoringDB_DB_Autre_Identifiant_National_c,
&#39;DB_Forme_Juridique_Generale__c&#39;,  $Label.MonitoringDB_DB_Forme_Juridique_Generale_c,
&#39;DB_Role_Arborescence__c&#39;,  $Label.MonitoringDB_DB_Role_Arborescence_c,

&#39;NULL&#39;)</formula>
    <label>Champ modifié</label>
    <type>Text</type>
</CustomField>