unpackaged/main/default/objects/MonitoringDB__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <label>Nom du Champ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>