unpackaged/main/default/objects/MonitoringDB__c/fields/Grand_compte__c.field-meta.xml
<CustomField>
    <fullName>Grand_compte__c</fullName>
    <formula>Account__r.Est_un_grand_compte__c</formula>
    <label>Grand compte</label>
    <type>Checkbox</type>
</CustomField>