unpackaged/main/default/objects/MonitoringDB__c/fields/ModificationDate__c.field-meta.xml
<CustomField>
    <fullName>ModificationDate__c</fullName>
    <label>Date de Modification</label>
    <type>DateTime</type>
</CustomField>