unpackaged/main/default/objects/MonitoringDB__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>Nouvelle Valeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>