unpackaged/main/default/objects/MonitoringDB__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>Ancienne Valeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>