unpackaged/main/default/objects/MonitoringDB__c/fields/PaysRegion_PF__c.field-meta.xml
<CustomField>
    <fullName>PaysRegion_PF__c</fullName>
    <formula>text( Account__r.PaysRegionPF__c )</formula>
    <label>Pays/Région PF</label>
    <type>Text</type>
</CustomField>