unpackaged/main/default/objects/MonitoringDB__c/fields/SEMEA_Account__c.field-meta.xml
<CustomField>
    <fullName>SEMEA_Account__c</fullName>
    <formula>OR(
    PaysRegion_PF__c= &#39;PIES&#39;,
				PaysRegion_PF__c= &#39;PITA&#39;,
				PaysRegion_PF__c= &#39;PIMA&#39;,
				PaysRegion_PF__c= &#39;PIZA&#39;,
				PaysRegion_PF__c= &#39;PIAE&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEMEA Account</label>
    <type>Checkbox</type>
</CustomField>