unpackaged/main/default/objects/MonitoringDB__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ModificationDate__c</columns>
    <columns>FieldName__c</columns>
    <columns>Champ_modifie__c</columns>
    <columns>NewValue__c</columns>
    <columns>OldValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>