unpackaged/main/default/objects/MonitoringDB__c/listViews/Comptes_Diffus_FRANCE.listView-meta.xml
<ListView>
    <fullName>Comptes_Diffus_FRANCE</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ModificationDate__c</columns>
    <columns>FieldName__c</columns>
    <columns>NewValue__c</columns>
    <columns>OldValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieldisMonitored__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FR_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Grand_compte__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Groupement__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Comptes Diffus - FRANCE</label>
</ListView>