unpackaged/main/default/objects/MonitoringDB__c/listViews/Grands_Comptes_ADV.listView-meta.xml
<ListView>
    <fullName>Grands_Comptes_ADV</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ModificationDate__c</columns>
    <columns>FieldName__c</columns>
    <columns>NewValue__c</columns>
    <columns>OldValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Grand_compte__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FieldisMonitored__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Grands Comptes - ADV</label>
</ListView>